--- a/travel.html
+++ b/travel.html
@@ -6,7 +6,16 @@
     <title>Travel</title>
 </head>
 <body>
-    <a href = "#main-content">Skip to Main Content</a>
+    <header>
+        <a href = "#main-content">Skip to Main Content</a>
+        <nav>
+            <ul>
+                <li class="active"><a href = "index.html" >Pets</a></li>
+                <li><a href = "travel.html">Travel</a></li>
+                <li><a href = "recipes.html">Recipes</a></li>
+             </ul>
+         </nav>
+    </header>
 
    
     <main id="main-content">
