--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <title>Pets</title>
 </head>
 <body>
+    <a href = "#main-content">Skip to Main Content</a>
     <header>
-        <a href = "#main-content">Skip to Main Content</a>
         <nav>
             <ul>
-                <li class="active"><a href = "index.html" >Pets</a></li>
+                <li><a href = "index.html" >Pets</a></li>
                 <li><a href = "travel.html">Travel</a></li>
                 <li><a href = "recipes.html">Recipes</a></li>
              </ul>
@@ -27,10 +29,12 @@
             <P>She often watches the scenery outside by the window and likes to blow the wind and bask in the sun. She often hides under the couch and suddenly comes out to scare people, and her nickname is "Stapler" because she often leaves two sharp tooth marks on people's butts. Even so, everyone loved her, especially her master, me. I love my cat PaoPao very, very, very much.</P>
 
             <h3>Photo Gallery</h3>
-            <img src="images/2be0a4d3fd8c687580a21099e40c13b.jpg" width ="200" alt = "Brown labradoodle wearing an orange bandana">
-            <img src="images/5b25195aaf99b7ce72255e3ed7b3cef.jpg"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
-            <img src="images/69c9e3938306860bcf8ce4c81bc10c9.jpg"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
-            <img src="images/bceb928e4dacc612872597f1a3884b3.jpg"  width ="200" alt="Brown labradoodle wearing a pirate costume">
+            <div class="grid-container">
+                <img src="images/2be0a4d3fd8c687580a21099e40c13b.jpg" width ="200" alt = "Brown labradoodle wearing an orange bandana">
+                <img src="images/5b25195aaf99b7ce72255e3ed7b3cef.jpg"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
+                <img src="images/69c9e3938306860bcf8ce4c81bc10c9.jpg"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
+                <img src="images/bceb928e4dacc612872597f1a3884b3.jpg"  width ="200" alt="Brown labradoodle wearing a pirate costume">
+            </div>
 
             <h3>Likes</h3>
             <ul>
@@ -104,6 +108,7 @@
                 <li>Biting his human</li>
                 <li>Chicken Breast</li>
                 <li>His catnip pillow</li>
+            </ul>
         </div>
         <div>
             <h2>Maple</h2>
@@ -122,9 +127,8 @@
                 <li>Belly rubs</li>
                 <li>Treats</li>
                 <li>Stretching her paws</li>
-
+            </ul>
         </div>
     </main>
-    
 </body>
 </html>
