--- a/index.html
+++ b/index.html
@@ -3,24 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <title>Pets</title>
 </head>
 <body>
-    <a href = "#main-content">Skip to Main Content</a>
+    
     <header>
-        <nav>
-            <ul>
-                <li><a href = "index.html" >Pets</a></li>
-                <li><a href = "travel.html">Travel</a></li>
-                <li><a href = "recipes.html">Recipes</a></li>
-             </ul>
-         </nav>
+        <a href = "#main-content" class="skip">Skip to Main Content</a>
+            <nav>
+                <ul>
+                    <li><a class = "current" href = "index.html" >Pets</a></li>
+                    <li><a href = "travel.html">Travel</a></li>
+                    <li><a href = "recipes.html">Recipes</a></li>
+                </ul>
+            </nav>
     </header>
 
     <main id="main-content">
         <h1>See all best baby!</h1>
+        <div class="pet">
         <div>
             <h2>PaoPao</h2>
             <img src="images/b3afa5f43bfa8d0c1b8d5aee78943bc.jpg" width = "400" alt="Brown labradoodle wearing colorful lei">
@@ -29,11 +35,11 @@
             <P>She often watches the scenery outside by the window and likes to blow the wind and bask in the sun. She often hides under the couch and suddenly comes out to scare people, and her nickname is "Stapler" because she often leaves two sharp tooth marks on people's butts. Even so, everyone loved her, especially her master, me. I love my cat PaoPao very, very, very much.</P>
 
             <h3>Photo Gallery</h3>
-            <div class="grid-container">
-                <img src="images/2be0a4d3fd8c687580a21099e40c13b.jpg" width ="200" alt = "Brown labradoodle wearing an orange bandana">
-                <img src="images/5b25195aaf99b7ce72255e3ed7b3cef.jpg"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
-                <img src="images/69c9e3938306860bcf8ce4c81bc10c9.jpg"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
-                <img src="images/bceb928e4dacc612872597f1a3884b3.jpg"  width ="200" alt="Brown labradoodle wearing a pirate costume">
+            <div>
+                <img src="images/2be0a4d3fd8c687580a21099e40c13b.jpg" width ="200" alt = "Paopao1">
+                <img src="images/5b25195aaf99b7ce72255e3ed7b3cef.jpg"  width ="200" alt="Paopao2">
+                <img src="images/69c9e3938306860bcf8ce4c81bc10c9.jpg"  width ="200" alt="Paopao3">
+                <img src="images/bceb928e4dacc612872597f1a3884b3.jpg"  width ="200" alt="Paopao4">
             </div>
 
             <h3>Likes</h3>
@@ -91,17 +97,17 @@
 
         </div>
         <div>
-            <h2>Van Gogh</h2>
-            <img src="images/van_gogh_on_fridge.jpg" width = "300" alt="manto">
+            <h2>Santa</h2>
+            <img src="images/santa1.jpg" width = "300" alt="Santa">
 
-            <p>Van Gogh is a three year old cat of mixed ragdoll and domestic shorthair breed. He was adopted when he was 7 months old. Van Gogh has been a people cat since he was young. </p> 
+            <p>Santa is a three year old cat of mixed ragdoll and domestic shorthair breed. He was adopted when he was 7 months old. Van Gogh has been a people cat since he was young. </p> 
             <P> He craves attention but needs alone time when he wants it. He is purely a masterpiece when his sapphire eyes staring at his human friends. He loves birds, rats, insects, and water from human mug..
             </P>
             <h3>Photo Gallery</h3>
-            <img src="images/van_gogh_cactus_bed.jpg" width ="300" alt = "manto1">
-            <img src="images/van_gogh_sitting.jpg"  width ="200" alt="manto2">
-            <img src="images/van_gogh_sleeping.jpg"  width ="200" alt="manto3">
-            <img src="images/van_gogh_on_fridge.jpg"  width ="200" alt="manto4">
+            <img src="images/santa2.jpg" width ="300" alt = "santa1">
+            <img src="images/santa3.jpg"  width ="200" alt="santa2">
+            <img src="images/santa4.jpg"  width ="200" alt="santa3">
+            <img src="images/santa5.jpg"  width ="200" alt="santa4">
 
             <h3>Likes</h3>
             <ul>
@@ -112,15 +118,15 @@
         </div>
         <div>
             <h2>Maple</h2>
-            <img src="images/maple_christmas.JPG" width = "300" alt="manto">
+            <img src="images/maple_christmas.JPG" width = "300" alt="Maple">
 
             <p>Maple is a 2 year old tabby cat with brown stripes. She is very playful and friendly but also loves lounging in the sun! Maple is a huge fan of treats - she has even learned how to open doors to steal some extra treats. </p> 
             <P> Sometimes Maple has boundless energy. At night, she gets the zoomies after eating her final meal of the day. It usually takes her another hour to settle down before she can take a long nap.</P>
             <h3>Photo Gallery</h3>
-            <img src="images/maple_playing.JPG" width ="300" alt = "manto1">
-            <img src="images/maple_santa.JPG"  width ="200" alt="manto2">
-            <img src="images/maple_selfie.JPG"  width ="200" alt="manto3">
-            <img src="images/maple_sun.JPG"  width ="200" alt="manto4">
+            <img src="images/maple_playing.JPG" width ="300" alt = "Maple1">
+            <img src="images/maple_santa.JPG"  width ="200" alt="Maple2">
+            <img src="images/maple_selfie.JPG"  width ="200" alt="Maple3">
+            <img src="images/maple_sun.JPG"  width ="200" alt="Maple4">
 
             <h3>Likes</h3>
             <ul>
@@ -128,6 +134,7 @@
                 <li>Treats</li>
                 <li>Stretching her paws</li>
             </ul>
+        </div>
         </div>
     </main>
 </body>
