--- a/recipes.html
+++ b/recipes.html
@@ -3,24 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <title>Recipes</title>
 </head>
-<body>
+<body class="recipe-body">
 
     <header>
-        <a href = "#main-content">Skip to Main Content</a>
-        <nav>
-            <ul>
-                <li class="active"><a href = "index.html" >Pets</a></li>
-                <li><a href = "travel.html">Travel</a></li>
-                <li><a href = "recipes.html">Recipes</a></li>
-             </ul>
-        </nav>
+        <a href = "#main-content" class="skip">Skip to Main Content</a>
+            <nav>
+                <ul>
+                    <li><a href = "index.html" >Pets</a></li>
+                    <li><a href = "travel.html">Travel</a></li>
+                    <li><a class = "current" href = "recipes.html">Recipes</a></li>
+                </ul>
+            </nav>
     </header>
 
    
     <main id="main-content">
         <h1>Check Out Our Recipies!</h1>
+    <div class="recipe">
     <div>
         <h2>Double Chocolate Cookies</h2>
         <span>Origin: Michigan</span><br>
@@ -140,6 +147,7 @@
         <img src="images/coca3.jpg" width = "200" alt="3">
 
         <!-- Colleen van Lent -->
+    </div>
     </div>
     </main>
 </body>
